--- a/template.yaml
+++ b/template.yaml
@@ -3,7 +3,7 @@ Transform: AWS::Serverless-2016-10-31
 Description: >
   Scikit-learn Lambda
   
-  Provided by AWSLambdas.com
+  Provided by MLPacks.com
 
 Resources:
   ApiGateway:
